--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,7 @@
 
  
-<web-app>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+ xsi:noNamespaceSchemaLocation="web.xsd">
 	<display-name>Archetype Created Web Application</display-name>
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
@@ -11,6 +12,10 @@
   		<servlet-name>Faces Servlet</servlet-name>
   		<url-pattern>/faces/*</url-pattern>
   	</servlet-mapping>
+  	<welcome-file-list>
+     	<welcome-file>faces/index.xhtml</welcome-file>
+    </welcome-file-list>
+  
   	<listener>
   		<listener-class>edu.eci.cvds.guice.GuiceContextListener</listener-class> 
   	</listener>>
