--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
   		<url-pattern>/faces/*</url-pattern>
   	</servlet-mapping>
   	<welcome-file-list>
-     	<welcome-file>faces/index.xhtml</welcome-file>
+     	<welcome-file>faces/registrocliente.xhtml</welcome-file>
     </welcome-file-list>
   
   	<listener>
